<resources>
    <string name="btn_item1">Item 1</string>
    <string name="btn_item2">Item 2</string>
    <string name="btn_item3">Item 3</string>
    <string name="btn_item4">Item 4</string>
    <string name="btn_item5">Item 5</string>
    <string name="btn_item6">Item 6</string>
    <string name="btn_item7">Item 7</string>
    <string name="btn_item8">Item 8</string>
    <string name="btn_item9">Item 9</string>
    <string name="btn_item10">Item 10</string>
    <string name="btn_item11">Item 11</string>
    <string name="btn_item12">Item 12</string>
    <string name="btn_item13">Item 13</string>
    <string name="btn_item14">Item 14</string>
    <string name="btn_item15">Item 15</string>
    <string name="btn_item16">Item 16</string>
    <string name="btn_item17">Item 17</string>

    <string name="app_name">Trabalho 1</string>
    <string name="tgl_turn_on">Turn On</string>
    <string name="tgl_turn_off">Turn Off</string>
    <string name="btn_display">Display</string>
    <string name="edt_1">Edit Text 1</string>
    <string name="btn_edt_1">Do it!</string>
    <string name="radb_excellent">Excellent</string>
    <string name="radb_satisfactory">Satisfactory</string>
    <string name="radb_below_average">Below Average</string>
    <string name="itm_add">Add</string>
    <string name="itm_edit">Edit</string>
    <string name="itm_delete">Delete</string>
    <string name="itm_settings">Settings</string>
    <string name="itm_about">About</string>
    <string name="btn_add">Add</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_show_popup_menu">Show Popup Menu</string>
    <string name="txt_long_press_target">Long press me!!!</string>
    <string name="txt_placeholder">Placeholder fragment</string>
    <string name="txt_tab3">Tab 3 Fragment</string>
    <string name="tab_placeholder_title">Placeholder</string>
    <string name="tab_2_title">Tab 2</string>
    <string name="tab_3_title">Tab 3</string>
    <string name="btn_play_song">Play</string>
    <string name="tgl_play_pause_song_play">Play</string>
    <string name="tgl_play_pause_song_pause">Pause</string>

</resources>
