<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/primarch_rogal_dorn">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_item1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_item1"
                android:onClick="btnItem1Click" />

            <Button
                android:id="@+id/btn_item2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_item2"
                android:onClick="btnItem2Click" />

            <Button
                android:id="@+id/btn_item3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_item3"
                android:onClick="btnItem3Click" />

            <Button
                android:id="@+id/btn_item4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_item4"
                android:onClick="btnItem4Click" />

            <Button
                android:id="@+id/btn_item5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_item5"
                android:onClick="btnItem5Click" />

            <Button
                android:id="@+id/btn_item6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_item6"
                android:onClick="btnItem6Click" />

            <Button
                android:id="@+id/btn_item8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_item8"
                android:onClick="btnItem8Click" />

            <Button
                android:id="@+id/btn_item10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_item10"
                android:onClick="btnItem10Click" />

            <Button
                android:id="@+id/btn_item13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_item13"
                android:onClick="btnItem13Click" />

            <Button
                android:id="@+id/btn_item16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_item16"
                android:onClick="btnItem16Click" />

            <Button
                android:id="@+id/btn_item17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_item17"
                android:onClick="btnItem17Click" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>