<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Item6Activity">

    <RadioGroup
        android:id="@+id/radg_satisfaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radb_excellent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radb_excellent" />

        <RadioButton
            android:id="@+id/radb_satisfactory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radb_satisfactory" />

        <RadioButton
            android:id="@+id/radb_below_average"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radb_below_average" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>